Update Документация подсистемы для менеджеров проектов и членов команд на платформе для онлайн управления проектами и командной работы.md

--- a/Документация подсистемы для менеджеров проектов и членов команд на платформе для онлайн управления проектами и командной работы.md
+++ b/Документация подсистемы для менеджеров проектов и членов команд на платформе для онлайн управления проектами и командной работы.md
@@ -49,7 +49,7 @@
 
 Задача появляется в списке задач исполнителя.
 
-![bpmn](Practice/UML_crowsfoot.png)
+![bpmn](UML_crowsfoot.png)
 
 ### Обновление статуса задачи
 
@@ -197,7 +197,7 @@
     *   Настраиваемые уведомления о событиях, изменениях в задачах и проектах.
     *   Отправка уведомлений по электронной почте, через push-уведомления или внутри системы.
 
-** Нефункциональные**
+**Нефункциональные**
 
 *   **Производительность и масштабируемость:**
 
@@ -240,7 +240,7 @@
 
 **Модель базы данных для подсистемы управления проектами и задачами**
 
-![модель БД](Practice/UML_crowsfoot.png)
+![модель БД](UML_crowsfoot.png)
 
 ## Архитектура подсистемы
 
@@ -400,9 +400,9 @@
 
 **Авторизация пользователя через User Web**
 
-![Авторизация пользователя через User Web](Practice/UML_Auto.png)
+![Авторизация пользователя через User Web](UML_Auto.png)
 
 **Создание задачи**
 
-![Создание задачи](Practice/UML_Task.png)
+![Создание задачи](UML_Task.png)
 
