Update Документация подсистемы для менеджеров проектов и членов команд на платформе для онлайн управления проектами и командной работы.md

--- a/Документация подсистемы для менеджеров проектов и членов команд на платформе для онлайн управления проектами и командной работы.md
+++ b/Документация подсистемы для менеджеров проектов и членов команд на платформе для онлайн управления проектами и командной работы.md
@@ -49,7 +49,7 @@
 
 Задача появляется в списке задач исполнителя.
 
-![bpmn](UML_crowsfoot.png)
+![bpmn](bpmn.png)
 
 ### Обновление статуса задачи
 
@@ -265,7 +265,7 @@
 
 *   аутентификация
 *   авторизация
-*   База данных
+  База данных
 
 #### User Service:
 
@@ -394,7 +394,7 @@
 
 ### C4 Container
 
-
+![С4 Context](С4_Conteiner.png)
 
 ## Описание взаимодействия компонентов системы
 
