Update Документация подсистемы для менеджеров проектов и членов команд на платформе для онлайн управления проектами и командной работы.md

--- a/Документация подсистемы для менеджеров проектов и членов команд на платформе для онлайн управления проектами и командной работы.md
+++ b/Документация подсистемы для менеджеров проектов и членов команд на платформе для онлайн управления проектами и командной работы.md
@@ -245,7 +245,7 @@
 ## Архитектура подсистемы
 
 ### Мой творческий черновик в drawio
-
+![черновик](subsystem for project managers and team members (1).jpg)
 
 ### Описание 
 #### Front:
