--- a/Документация подсистемы для менеджеров проектов и членов команд на платформе для онлайн управления проектами и командной работы.md
+++ b/Документация подсистемы для менеджеров проектов и членов команд на платформе для онлайн управления проектами и командной работы.md
@@ -246,7 +246,7 @@
 
 ### Мой творческий черновик в drawio
 
-![модель БД](subsystem for project managers and team members (1).jpg)
+![черновик](subsystem for project managers and team members.jpg)
 
 ### Описание 
 #### Front:
